--- a/app/src/main/res/layout/activity_detail_dokter.xml
+++ b/app/src/main/res/layout/activity_detail_dokter.xml
@@ -57,7 +57,6 @@
                     android:id="@+id/dt_doctorname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
                     android:layout_marginTop="28dp"
                     android:layout_toRightOf="@id/foto_dokterdani"
                     android:fontFamily="@font/varelaround"
@@ -67,11 +66,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-
+android:layout_marginLeft="2dp"
                     android:id="@+id/dt_doctorspecialist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="13dp"
                     android:layout_marginTop="65dp"
                     android:layout_toRightOf="@id/foto_dokterdani"
                     android:fontFamily="@font/varelaround"
@@ -83,7 +81,7 @@
                     android:id="@+id/sendwaphone"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_marginLeft="14dp"
+                    android:layout_marginLeft="4dp"
                     android:layout_marginTop="94dp"
                     android:layout_toRightOf="@id/foto_dokterdani"
                     android:background="@drawable/doctor_call"
@@ -93,7 +91,7 @@
                     android:id="@+id/sendwachat"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_marginLeft="62dp"
+                    android:layout_marginLeft="52dp"
                     android:layout_marginTop="94dp"
                     android:layout_toRightOf="@id/foto_dokterdani"
                     android:background="@drawable/doctor_chat"
@@ -103,7 +101,7 @@
                     android:id="@+id/sendwavideo"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_marginLeft="112dp"
+                    android:layout_marginLeft="102dp"
                     android:layout_marginTop="94dp"
                     android:layout_toRightOf="@id/foto_dokterdani"
                     android:background="@drawable/doctor_video"
@@ -122,6 +120,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:layout_marginRight="24dp"
                     android:id="@+id/dt_doctorabout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -151,6 +150,8 @@
                     android:gravity="center">
 
                     <ImageButton
+                        android:layout_marginLeft="28dp"
+                        android:layout_marginRight="28dp"
                         android:id="@+id/image_detail"
                         android:layout_width="350dp"
                         android:layout_height="90dp"
@@ -160,7 +161,7 @@
                         android:id="@+id/foto_dokter2"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        android:layout_marginLeft="12dp"
+                        android:layout_marginLeft="48dp"
                         android:layout_marginTop="14dp"
                         android:background="@drawable/doctor_date">
 
@@ -244,6 +245,15 @@
 
 
                 </RelativeLayout>
+                <EditText
+                    android:visibility="gone"
+                    android:id="@+id/dt_doctoraccount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="160dp"
+                    android:text="akun"
+                    android:textAlignment="center"
+                     />
 
                 <EditText
                     android:id="@+id/dt_doctorphonenumber"
