--- a/app/src/main/res/layout/item_dokter.xml
+++ b/app/src/main/res/layout/item_dokter.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
+    android:layout_marginLeft="24dp"
+    android:layout_marginRight="24dp"
     android:layout_marginBottom="14dp">
 
 
